-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
5.13.2, 5.15.2, 5.15.8
-
Qt 5.14.2, Visual C++ 16.6, Windows 10 Prof. 64bit
-
-
b4a207af6 (dev)
A IntValidator for a TextField does not prevent numbers greater than the "top", or less than "bottom" from being entered.
It instead limits to the same number of digits (Example: "bottom: 11", "top: 31").
However, "acceptableInput" is correctly.
The following code reproduces the issue:
TextField { id: intTextField validator: IntValidator { top: 31 bottom: 11 } } TextField { // but this works text: intTextField.acceptableInput ? "acceptable" : "not acceptable" }