src/quick/util/qquickvalidator.cpp
@@ -29,6 +29,20 @@ QT_BEGIN_NAMESPACE
 
     \snippet qml/intvalidator.qml 0
 
+    The validator will prevent the submission of text which can't possibly be
+    valid. However, while editing, only easily identified invalidity will be
+    blocked, for example sign conflicts or too many non-zero digits. This can
+    sometimes be surprising. The validator in the example above will for
+    instance allow entering "999", as values consisting of a number of digits
+    equal to or less than the max value are considered "intermediate" --
+    meaning that they are in a state where they are not valid, but could be
+    adjusted to be so. This is intended because the digit that prevents a
+    number from being in range is not necessarily the last digit typed. This
+    also means that an intermediate number can have leading zeros.
+
+    Adding a visual indicator based on TextInput's \l{TextInput::acceptableInput}{acceptableInput}
+    property can make clear to the user whether what they've typed will actually be accepted.
+
     \sa DoubleValidator, RegularExpressionValidator, {Validating Input Text}
 */
 
